src/fli_ffi.rs

#[doc = " @brief An opaque handle used by library functions to refer to FLI hardware.\n"]
pub type flidev_t = ::std::os::raw::c_long;
#[doc = " @brief The domain of an FLI device.  This consists of a bitwise ORed\n combination of interface method and device type.  Valid interfaces\n are \\texttt{FLIDOMAIN_PARALLEL_PORT}, \\texttt{FLIDOMAIN_USB},\n \\texttt{FLIDOMAIN_SERIAL}, and \\texttt{FLIDOMAIN_INET}.  Valid\n device types are \\texttt{FLIDEVICE_CAMERA},\n \\texttt{FLIDOMAIN_FILTERWHEEL}, and \\texttt{FLIDOMAIN_FOCUSER}.\n\n @see FLIOpen\n @see FLIList\n"]
pub type flidomain_t = ::std::os::raw::c_long;
#[doc = " @brief The frame type for an FLI CCD camera device.  Valid frame types are\n #FLI_FRAME_TYPE_NORMAL and #FLI_FRAME_TYPE_DARK.\n @link FLISetFrameType"]
pub type fliframe_t = ::std::os::raw::c_long;
#[doc = "The gray-scale bit depth for an FLI camera device.  Valid bit\ndepths are \\texttt{FLI_MODE_8BIT} and \\texttt{FLI_MODE_16BIT}.\n\n@see FLISetBitDepth"]
pub type flibitdepth_t = ::std::os::raw::c_long;
#[doc = " @brief Type used for shutter operations for an FLI camera device.  Valid\n shutter types are FLI_SHUTTER_CLOSE,\n FLI_SHUTTER_OPEN,\n FLI_SHUTTER_EXTERNAL_TRIGGER,\n FLI_SHUTTER_EXTERNAL_TRIGGER_LOW, and\n FLI_SHUTTER_EXTERNAL_TRIGGER_HIGH.\n\n @see FLIControlShutter\n"]
pub type flishutter_t = ::std::os::raw::c_long;
#[doc = "Type used for background flush operations for an FLI camera device.  Valid\nbgflush types are \\texttt{FLI_BGFLUSH_STOP} and\n\\texttt{FLI_BGFLUSH_START}.\n\n@see FLIControlBackgroundFlush"]
pub type flibgflush_t = ::std::os::raw::c_long;
#[doc = "Type used to determine which temperature channel to read.  Valid\nchannel types are \\texttt{FLI_TEMPERATURE_INTERNAL} and\n\\texttt{FLI_TEMPERATURE_EXTERNAL}.\n\n@see FLIReadTemperature"]
pub type flichannel_t = ::std::os::raw::c_long;
#[doc = "Type specifying library debug levels.  Valid debug levels are\n\\texttt{FLIDEBUG_NONE}, \\texttt{FLIDEBUG_INFO},\n\\texttt{FLIDEBUG_WARN}, and \\texttt{FLIDEBUG_FAIL}.\n\n@see FLISetDebugLevel"]
pub type flidebug_t = ::std::os::raw::c_long;
pub type flimode_t = ::std::os::raw::c_long;
pub type flistatus_t = ::std::os::raw::c_long;
pub type flitdirate_t = ::std::os::raw::c_long;
pub type flitdiflags_t = ::std::os::raw::c_long;
extern "C" {
    pub fn FLIDebug(level: ::std::os::raw::c_int, format: *mut ::std::os::raw::c_char, ...);
}
extern "C" {
    #[doc = " @brief Get a handle to an FLI device. This function requires the filename and domain of the requested device. Valid device filenames can be obtained using the `FLIList()` function. An application may use any number of handles associated with the same physical device. When doing so, it is important to lock the appropriate device to ensure that multiple accesses to the same device do not occur during critical operations.\n\n @param dev Pointer to where a handle to the device will be stored.\n @param name Pointer to a string where the device filename to be opened is stored.\n For parallel port devices that are not probed by `FLIList()` (Win 9x), place the address of the parallel port in a string in ASCII form, e.g. \"0x378\".\n @param domain Domain to apply to `name` for device opening. This is a bitwise OR of the interface method and device type. Valid interfaces are `FLIDOMAIN_PARALLEL_PORT`, `FLIDOMAIN_USB`, `FLIDOMAIN_SERIAL`, and `FLIDOMAIN_INET`. Valid device types are `FLIDEVICE_CAMERA`, `FLIDOMAIN_FILTERWHEEL`, and `FLIDOMAIN_FOCUSER`.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIOpen(
        dev: *mut flidev_t,
        name: *mut ::std::os::raw::c_char,
        domain: flidomain_t,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Enable debugging of API operations and communications. Use this function in\n combination with FLIDebug to assist in diagnosing problems that may be encountered\n during programming.\n\n When usings Microsoft Windows operating systems, creating an empty file\n `C:\\\\FLIDBG.TXT` will override this option. All debug output will then\n be directed to this file.\n\n @param host Name of the file to send debug output to. This parameter is ignored on Linux where `syslog(3)` is used to send debug output to the system log (see `syslog.conf(5)` to confugure `syslogd`).\n @param level Debug level. This parameter is a bitwise OR of the following values:\n - `FLIDEBUG_NONE` - No debug output.\n - `FLIDEBUG_INFO` - Informational messages.\n - `FLIDEBUG_WARN` - Warning messages.\n - `FLIDEBUG_FAIL` - Error messages.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLISetDebugLevel(
        host: *mut ::std::os::raw::c_char,
        level: flidebug_t,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Close a handle to an FLI device. This function releases the handle to the device and frees any resources associated with it.\n\n @param dev Handle to the device to close.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIClose(dev: flidev_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the current library version. This function copies up to `len - 1` characters of the library version string to the buffer pointed to by `ver`. The string is null-terminated.\n\n @param ver Pointer to a character buffer where the library version string will be stored.\n @param len The size of the buffer in bytes.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetLibVersion(ver: *mut ::std::os::raw::c_char, len: usize)
        -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the model of a given device. This function copies up to `len - 1` characters of the device model string to the buffer pointed to by `model`. The string is null-terminated.\n\n @param dev Device handle.\n @param model Pointer to a character buffer where the device model string will be stored.\n @param len The size of the buffer in bytes.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetModel(
        dev: flidev_t,
        model: *mut ::std::os::raw::c_char,
        len: usize,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Find the dimensions of a pixel in the device's CCD array. This function returns the dimensions of a pixel in the device's CCD array in microns. The values are stored in the variables pointed to by `pixel_x` and `pixel_y`.\n\n @param dev Camera handle.\n @param pixel_x Pointer to a double where the pixel width will be stored.\n @param pixel_y Pointer to a double where the pixel height will be stored.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetPixelSize(
        dev: flidev_t,
        pixel_x: *mut f64,
        pixel_y: *mut f64,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the hardware revision of a given device. This function returns the hardware revision of the device in the variable pointed to by `hwrev`.\n\n @param dev Device handle.\n @param hwrev Pointer to a long where the hardware revision will be stored.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetHWRevision(
        dev: flidev_t,
        hwrev: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the firmware revision of a given device. This function returns the firmware revision of the device in the variable pointed to by `fwrev`.\n\n @param dev Device handle.\n @param fwrev Pointer to a long where the firmware revision will be stored.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetFWRevision(
        dev: flidev_t,
        fwrev: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the array area of a given device. This function returns the array area of the device in the variables pointed to by `ul_x`, `ul_y`, `lr_x`, and `lr_y`.\n\n @param dev Camera handle.\n @param ul_x Upper-left x-coordinate.\n @param ul_y Upper-left y-coordinate.\n @param lr_x Lower-right x-coordinate.\n @param lr_y Lower-right y-coordinate.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetArrayArea(
        dev: flidev_t,
        ul_x: *mut ::std::os::raw::c_long,
        ul_y: *mut ::std::os::raw::c_long,
        lr_x: *mut ::std::os::raw::c_long,
        lr_y: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the visible area of a given device. This function returns the visible area of the device in the variables pointed to by `ul_x`, `ul_y`, `lr_x`, and `lr_y`.\n\n @param dev Camera handle.\n @param ul_x Upper-left x-coordinate.\n @param ul_y Upper-left y-coordinate.\n @param lr_x Lower-right x-coordinate.\n @param lr_y Lower-right y-coordinate.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetVisibleArea(
        dev: flidev_t,
        ul_x: *mut ::std::os::raw::c_long,
        ul_y: *mut ::std::os::raw::c_long,
        lr_x: *mut ::std::os::raw::c_long,
        lr_y: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Set the exposure time for a given device. This function sets the exposure time for the device to `exptime` milliseconds.\n\n @param dev Camera handle.\n @param exptime Exposure time in milliseconds.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLISetExposureTime(
        dev: flidev_t,
        exptime: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Set the region of interest for a given device. This function sets the region of interest for the device to the rectangle defined by the upper-left corner `(ul_x, ul_y)` and the lower-right corner `(lr_x, lr_y)`.\n\n @param dev Camera handle.\n @param ul_x Upper-left x-coordinate (unbinned coordinates).\n @param ul_y Upper-left y-coordinate (unbinned coordinates).\n @param lr_x Lower-right x-coordinate (binned coordinates).\n @param lr_y Lower-right y-coordinate (binned coordinates).\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLISetImageArea(
        dev: flidev_t,
        ul_x: ::std::os::raw::c_long,
        ul_y: ::std::os::raw::c_long,
        lr_x: ::std::os::raw::c_long,
        lr_y: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Set the horizontal binning for a given device. This function sets the horizontal binning for the device to `hbin`.\n\n @param dev Camera handle.\n @param hbin Horizontal bin value. Valid values are between 1 and 16.\n @return LIBFLIAPI"]
    pub fn FLISetHBin(dev: flidev_t, hbin: ::std::os::raw::c_long) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Set the vertical binning for a given device. This function sets the vertical binning for the device to `vbin`.\n\n @param dev Camera handle.\n @param vbin Vertical bin value. Valid values are between 1 and 16.\n @return LIBFLIAPI"]
    pub fn FLISetVBin(dev: flidev_t, vbin: ::std::os::raw::c_long) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Set the frame type for a given device. This function sets the frame type for the device to `frametype`.\n\n @param dev Camera handle.\n @param frametype Frame type. Valid values are `FLI_FRAME_TYPE_NORMAL` (shutter open) and `FLI_FRAME_TYPE_DARK` (shutter closed).\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLISetFrameType(dev: flidev_t, frametype: fliframe_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Cancel an ongoing exposure.\n\n @param dev Camera handle.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLICancelExposure(dev: flidev_t) -> ::std::os::raw::c_long;
}
